feature nmigration wallet bought credit card
migrate interface form of wallet bought with credit card , advance chash and credit card bought and the end it fix some issues found over date, plain buttons, new cache feature

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/CreditCardModule/src/main/res/values/value.xml
+++ b/CreditCardModule/src/main/res/values/value.xml
@@ -39,6 +39,11 @@
     <string name="month">Mes</string>
     <string name="credit_rate">Tasa</string>
     <string name="period">Cuotas</string>
+    <string name="tag">Etiqueta</string>
+    <string name="add_tag">Agregar Etiqueta</string>
+    <string name="setting_kind">Tipo Configuración</string>
+    <string name="setting_name">Nombre Configuración</string>
+    <string name="recurrent">Recurrente</string>
 
     <string name="total_quote_value_short">Tot Cuota</string>
     <string name="interest_value_short">Interes</string>
