--- a/app/src/main/res/layout-sw720dp/buys_credit_card.xml
+++ b/app/src/main/res/layout-sw720dp/buys_credit_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,287 +7,8 @@
     android:layout_gravity="center_vertical"
     android:layout_margin="@dimen/padding_page"
     android:orientation="vertical">
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/radius_corner"
-    app:strokeWidth="@dimen/stroke_with"
-    app:cardElevation="@dimen/card_elevator">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/space_min"
-        android:orientation="vertical">
-
-        <LinearLayout
-        android:id="@+id/llCreditCardAssign"
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_editor_absoluteX="0dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/space_min"
-            app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
-            android:layout_height="match_parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/dtBought"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/bought_date_time"
-            android:inputType="date"
-            android:textAlignment="textEnd" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lCreditCardAssign"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/assing_credit_Card" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCreditCardAssign"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/assing_credit_Card"
-            android:textAlignment="center" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llCreditCardAssign"
-        tools:layout_editor_absoluteX="0dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etNameItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/product_name" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:layout_margin="@dimen/space_min"
-            app:prefixText="$"
-            android:layout_weight="1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etProductValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/product_value"
-            android:inputType="numberSigned"/>
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        tools:layout_editor_absoluteX="2dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/linearLayoutTax"
-            android:layout_weight="1"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/tax"
-            app:suffixText="%">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etTaxBought"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="0.0"
-            android:textAlignment="textEnd" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:layout_weight="1">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etMonths"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:hint="@string/months_number"
-            android:inputType="numberSigned"
-            android:textAlignment="center" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutQuoteValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTax"
-        tools:layout_editor_absoluteX="1dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="@dimen/space_min"
-            android:layout_margin="@dimen/space_min"
-            android:background="@color/green_light_trans"
-            app:prefixText="@string/recurrent" >
-
-        <CheckBox
-            android:id="@+id/cbRecurrent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lQuoteValue"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/quotes_value" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etQuoteValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="@string/money_hint"
-            android:textAlignment="textEnd" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/llSetingTypeBCC"
-            app:endIconMode="clear_text"
-            android:layout_weight="1"
-            android:hint="@string/credit_card_setting_type_setting">
-
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/spTypeSettingBCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/llSettingNameBCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:endIconMode="clear_text"
-            android:layout_weight="1"
-            android:hint="@string/credit_card_setting_name_setting">
-
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/spNameSettingBCC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/MaterialTextInputLayoutView"
-            android:layout_weight="1"
-            android:hint="@string/tag">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_tag_bcc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/MaterialTextInputLayoutView"
-                android:focusable="false"
-                android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/llSettingNameBCC"
-        tools:layout_editor_absoluteX="1dp">
-
-
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnClearBought"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1"
-            android:text="@string/clear"
-            app:icon="@drawable/ic_baseline_cleaning_services_24" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSaveBought"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1"
-            android:text="@string/save"
-            app:icon="@android:drawable/ic_menu_save" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_save_new_one"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1"
-            app:icon="@android:drawable/ic_menu_save"
-            android:text="@string/save_new"/>
-    </LinearLayout>
-    </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/cv_composable_bcc"/>
+</LinearLayout>
