--- a/app/src/main/res/layout/cash_advance_credit_card.xml
+++ b/app/src/main/res/layout/cash_advance_credit_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,172 +7,10 @@
     android:layout_gravity="center_vertical"
     android:padding="@dimen/padding_page"
     android:orientation="vertical">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="@dimen/radius_corner"
-    app:strokeWidth="@dimen/stroke_with"
-    app:cardElevation="@dimen/card_elevator">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/space_min"
-        android:orientation="vertical">
+   <androidx.compose.ui.platform.ComposeView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/cv_compose_cacc"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lCreditCardAssignCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/assing_credit_Card" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCreditCardAssignCACC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/MaterialTextInputLayoutView"
-            android:enabled="false"
-            android:text="@string/assing_credit_Card"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:hint="@string/bought_date_time">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/dtBoughtCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="date"
-            android:textAlignment="textEnd"
-            android:drawableStart="@drawable/ic_baseline_calendar_month_24"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lNameItemCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:hint="@string/product_name">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etNameItemCACC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/lProductValueCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:prefixText="$"
-            android:hint="@string/product_value">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etProductValueCACC"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:inputType="numberSigned|numberDecimal"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_light_trans"
-            android:hint="@string/tax"
-            app:suffixText="%"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="viewStart"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etTaxBoughtCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:text="0.0"
-            android:inputType="numberSigned"
-            android:textAlignment="textEnd" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_light_trans"
-            android:hint="@string/months"
-            style="@style/MaterialTextInputLayoutView"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvMontCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/months_number_hint"
-            style="@style/MaterialTextInputLayoutView"
-            android:enabled="false"
-            android:textAlignment="textEnd"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/quotes_value"
-            style="@style/MaterialTextInputLayoutView"
-            android:textStyle="bold" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etQuoteValueCACC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            style="@style/MaterialTextInputLayoutView"
-            android:enabled="false"
-            android:hint="@string/money_hint"
-            android:inputType="number|textPersonName"
-            android:textAlignment="textEnd" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnClearBoughtCACC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/space_min"
-            android:text="@string/clear"
-            app:icon="@drawable/ic_baseline_cleaning_services_24" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSaveBoughtCACC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:layout_weight="1"
-            android:text="@string/save"
-            app:icon="@android:drawable/ic_menu_save" />
-
-
-    </LinearLayout>
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</com.google.android.material.card.MaterialCardView>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
