feature nmigration wallet bought credit card
migrate interface form of wallet bought with credit card , advance chash and credit card bought and the end it fix some issues found over date, plain buttons, new cache feature

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -93,6 +93,9 @@
             android:id="@+id/action_list_bought_to_buy_credit_card2"
             app:destination="@id/buy_credit_card" />
         <deepLink app:uri="android-app://co.com.japl.finanzas.module.app/listBought"/>
+        <action
+            android:id="@+id/action_list_bought_to_boughWalletController"
+            app:destination="@id/boughWalletController" />
     </fragment>
 
     <fragment
