--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/check_payments_title"
         android:titleCondensed="@string/check_payments_title"
         app:showAsAction="ifRoom" />
-
+    <group>
     <item
         android:id="@+id/item_menu_setting_credit_card"
         android:icon="@drawable/ic_credit_card_foreground"
@@ -26,6 +26,13 @@
         android:title="@string/taxes_credit_card"
         app:showAsAction="ifRoom" />
 
+        <item
+            android:id="@+id/sms_list_credit_card"
+            android:icon="@android:drawable/stat_notify_chat"
+            android:title="@string/sms_credit_card"
+             />
+    </group>
+
     <item
         android:id="@+id/item_menu_setting_account"
         android:icon="@drawable/ic_credit_card_foreground"
@@ -37,6 +44,7 @@
         android:icon="@drawable/ic_credit_card_foreground"
         android:title="@string/paids"
         />
+
 
     <item
     android:id="@+id/item_menu_setting_about_it"
