--- a/app/src/main/res/layout/fragment_g_drive_connect.xml
+++ b/app/src/main/res/layout/fragment_g_drive_connect.xml
@@ -33,11 +33,37 @@
             android:layout_height="wrap_content"
             android:text="Login" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/logged">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/upload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Upload" />
+
+            <Button
+                android:id="@+id/read"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Read" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Logout" />
+        </LinearLayout>
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signLogin"
