--- a/app/src/main/res/layout/fragment_paids.xml
+++ b/app/src/main/res/layout/fragment_paids.xml
@@ -1,159 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
-    app:strokeWidth="@dimen/stroke_with"
-    app:cardElevation="@dimen/card_elevator"
-    app:cardCornerRadius="@dimen/radius_corner"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".finanzas.controller.paids.PaidsFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/space_min">
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/pb_load_ps"/>
+  <androidx.compose.ui.platform.ComposeView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/cv_paids_fp"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/period"
-                style="@style/MaterialTextInputLayoutView"
-                android:layout_margin="@dimen/space_min">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:id="@+id/period_ps"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/date_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/count"
-                style="@style/MaterialTextInputLayoutView"
-                android:layout_margin="@dimen/space_min">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:id="@+id/count_ps"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/months_number_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/paid"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:layout_margin="@dimen/space_min">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:id="@+id/paid_ps"
-                    android:text="@string/money_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/input_total"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:layout_margin="@dimen/space_min">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:id="@+id/tv_input_total_ps"
-                    android:text="@string/money_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/input_minus_output"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:layout_margin="@dimen/space_min">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="center"
-                    android:id="@+id/tv_input_less_paid_ps"
-                    android:text="@string/money_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_detail_ps"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        android:layout_weight="1"
-                        android:text="@string/detail"
-                        app:icon="@android:drawable/ic_menu_view" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_periods_ps"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        android:layout_weight="1"
-                        android:text="@string/periods"
-                        app:icon="@android:drawable/ic_menu_agenda" />
-
-                </LinearLayout>
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_add_ps"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:text="@string/add"
-                    app:icon="@android:drawable/ic_menu_add" />
-
-            </LinearLayout>
-
-            <co.japl.android.graphs.drawer.CustomDraw
-                android:id="@+id/cv_canvas_ps"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"/>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
