--- a/app/src/main/res/layout/fragment_paid.xml
+++ b/app/src/main/res/layout/fragment_paid.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,107 +9,10 @@
     app:cardElevation="@dimen/card_elevator"
     android:layout_margin="@dimen/space_min"
     tools:context=".finanzas.controller.paids.PaidFragment">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
+
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/space_min"
-        android:orientation="vertical">
+        android:id="@+id/cw_compose_fp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:padding="@dimen/space_min"
-            android:hint="@string/date_paid">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/date_paid_p"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:padding="@dimen/space_min"
-            android:hint="@string/account">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/account_p"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:textAlignment="center"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:padding="@dimen/space_min"
-            android:hint="@string/name">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:id="@+id/name_p"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:padding="@dimen/space_min"
-            app:endIconMode="clear_text"
-            android:hint="@string/value">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/value_p"
-                android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:padding="@dimen/space_min"
-            app:prefixText="@string/recurrent">
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:layout_width="match_parent"
-                android:id="@+id/recurrent_p"
-                android:layout_height="wrap_content"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                android:layout_weight="1"
-                android:id="@+id/btn_cancel_p"
-                app:icon="@android:drawable/ic_delete"
-                android:text="@string/cancel"/>
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                app:icon="@android:drawable/ic_menu_save"
-                android:layout_weight="1"
-                android:id="@+id/btn_save_p"
-                android:text="@string/save"/>
-        </LinearLayout>
-    </LinearLayout>
-    </ScrollView>
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
