--- a/japl-android-finances-paid-module/src/main/res/values/values.xml
+++ b/japl-android-finances-paid-module/src/main/res/values/values.xml
@@ -10,14 +10,30 @@
     <string name="incomes_total">Total Ingresos</string>
     <string name="incomes_less_paids">Ingresos - Pagos</string>
 
-    <string name="navigate_paid">android-app://co.com.japl.finanzas.module.app/paid/form?codePaid=%d</string>
+    <string name="add_paid">Agregar Pago</string>
+    <string name="value">Valor</string>
+    <string name="date_paid">Fecha de pago</string>
+    <string name="name_item">Nombre</string>
+    <string name="value_item">Valor</string>
+    <string name="delete">Eliminar</string>
+    <string name="edit">Actualizar</string>
+    <string name="recurrent">Recurrente</string>
+    <string name="copy">Copiar</string>
+    <string name="end">Finalizar</string>
+
+
+    <string name="navigate_paid">android-app://co.com.japl.finanzas.module.app/paid/form?code_paid=%d&amp;code_account=%d</string>
     <string name="navigate_paid_create">android-app://co.com.japl.finanzas.module.app/paid/form?code_account=%d</string>
     <string name="navigate_paids">android-app://co.com.japl.finanzas.module.app/paid/list?code_account=%d</string>
     <string name="navigate_period">android-app://co.com.japl.finanzas.module.app/paid/period?code_account=%d</string>
+
+    <string name="dialog_delete">¿Desea eliminar el registro?</string>
 
     <string name="toast_update_successful">Se realizo la actualización correctamente</string>
     <string name="toast_update_error">No se logró realizar la actualización</string>
     <string name="toast_save_successful">Se creo el registro correctamente</string>
     <string name="toast_save_error">No se logró crear el registro</string>
+    <string name="toast_successful_deleted">Se eliminó correctamente</string>
+    <string name="toast_unsuccessful_deleted">No se eliminó el registro</string>
 
 </resources>
