--- a/ui/src/main/res/values/value.xml
+++ b/ui/src/main/res/values/value.xml
@@ -5,4 +5,5 @@
     <string name="clear">Limpiar</string>
     <string name="see_more">Ver más</string>
     <string name="close">Cerrar</string>
+    <string name="money">Dinero</string>
 </resources>
