--- a/japl-android-finances-paid-module/src/main/res/values/values.xml
+++ b/japl-android-finances-paid-module/src/main/res/values/values.xml
@@ -21,11 +21,56 @@
     <string name="copy">Copiar</string>
     <string name="end">Finalizar</string>
 
+    <string name="year">Año</string>
+    <string name="month">Mes</string>
+    <string name="see">Ver</string>
 
+    <string name="create">Crear</string>
+    <string name="name">Nombre</string>
+    <string name="add_input_account">Agregar Ingreso</string>
+    <string name="active">Activo</string>
+    <string name="monthly">Mensual</string>
+    <string name="bi_monthly">Bi-Mensual</string>
+    <string name="trimesterly">Trimestral</string>
+    <string name="quarterly">Cuatrimestral</string>
+    <string name="semesterly">Semestral</string>
+    <string name="yearly">Anual</string>
+    <string name="delete_input">Eliminar Ingreso</string>
+    <string name="update_input_value">Actualizar Valor</string>
+    <string name="add_account">Agregar Cuenta</string>
+    <string name="kind_of_pay">Tipo de Pago</string>
+    <string name="date_input">Fecha Ingreso</string>
+    <string name="update_value_paymnet">Actualizar Valor Pago</string>
+    <string name="cancel">Cancelar</string>
+    <string name="num_inputs">Cantidad</string>
+    <string name="input_total">Total</string>
+    <string name="monthly_input_total">Total Mensual</string>
+    <string name="yearly_input_total">Total Anual</string>
+
+    <array name="months_short">
+        <item>Enero</item>
+        <item>Febrero</item>
+        <item>Marzo</item>
+        <item>Abril</item>
+        <item>Mayo</item>
+        <item>Junio</item>
+        <item>Julio</item>
+        <item>Agosto</item>
+        <item>Septiembre</item>
+        <item>Octubre</item>
+        <item>Noviembre</item>
+        <item>Diciembre</item>
+    </array>
+
+
+    <string name="navigate_account_code">android-app://co.com.japl.finanzas.module.app/accounts/inputs?code_paid=%d</string>
+    <string name="navigate_account">android-app://co.com.japl.finanzas.module.app/accounts/inputs</string>
+    <string name="navigate_input">android-app://co.com.japl.finanzas.module.app/accounts/input?account_code=%d</string>
     <string name="navigate_paid">android-app://co.com.japl.finanzas.module.app/paid/form?code_paid=%d&amp;code_account=%d</string>
     <string name="navigate_paid_create">android-app://co.com.japl.finanzas.module.app/paid/form?code_account=%d</string>
-    <string name="navigate_paids">android-app://co.com.japl.finanzas.module.app/paid/list?code_account=%d</string>
+    <string name="navigate_paids">android-app://co.com.japl.finanzas.module.app/paid/list?code_account=%d&amp;period=%s</string>
     <string name="navigate_period">android-app://co.com.japl.finanzas.module.app/paid/period?code_account=%d</string>
+    <string name="navigate_monthly">android-app://co.com.japl.finanzas.module.app/paid/monthly?period=%s</string>
 
     <string name="dialog_delete">¿Desea eliminar el registro?</string>
 
@@ -35,5 +80,10 @@
     <string name="toast_save_error">No se logró crear el registro</string>
     <string name="toast_successful_deleted">Se eliminó correctamente</string>
     <string name="toast_unsuccessful_deleted">No se eliminó el registro</string>
+    <string name="toast_successful_end_recurrent">Se realizó la finalización correctamente</string>
+    <string name="toast_unsuccessful_end_recurrent">No se logró finalizar</string>
+    <string name="toast_successful_copy">Se realizó la copia correctamente</string>
+    <string name="toast_unsuccessful_copy">No se realizó la copia</string>
+    <string name="toast_do_you_want_to_delete_this_record">¿Desea eliminar este registro?</string>
 
 </resources>
